--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
         "dev": "vite",
         "build": "vite build"
     },
+    "type": "module",
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "puppeteer": "^19.10.1"
     }
 }
